@@ -10,7 +10,11 @@ import com.KookBee.classservice.domain.entity.DayOff;
 import com.KookBee.classservice.domain.entity.StudentBootcamp;
 import com.KookBee.classservice.domain.request.DayOffApplyRequest;
 import com.KookBee.classservice.domain.request.DayOffStatusModifyRequest;
+
+import com.KookBee.classservice.domain.response.dayoff.*;
+
 import com.KookBee.classservice.domain.response.*;
+
 import com.KookBee.classservice.exception.DayOffDateCheckException;
 import com.KookBee.classservice.exception.DayOffNoneCurriculumException;
 import com.KookBee.classservice.exception.DayOffUseDaysCheckException;
@@ -39,7 +43,7 @@ public class DayOffService {
     private final BootcampRepository bootcampRepository;
     private final UserServiceClient userServiceClient;
 
-    public DayOff dayOffApply(DayOffApplyRequest request, Long bootcampId)
+    public void dayOffApply(DayOffApplyRequest request, Long bootcampId)
             throws DayOffDateCheckException, DayOffUseDaysCheckException, DayOffNoneCurriculumException {
         Long userId = jwtService.tokenToDTO(jwtService.getAccessToken()).getId();
         // request의 시작일과 종료일을 LocalDate타입으로 변경
@@ -65,10 +69,11 @@ public class DayOffService {
         Integer remainingDayOff = getRemainingDayOff(bootcampId, userId);
         DayOffApplyDTO dto = new DayOffApplyDTO(request,userId,startCurriculumId);
         if (remainingDayOff >= dto.getDays()){
-            return dayOffRepository.save(new DayOff(dto));
+            dayOffRepository.save(new DayOff(dto));
         } else {
            throw new DayOffUseDaysCheckException();
         }
+
     }
 
     // 남은 휴가일수 구하기---------------------------------
@@ -85,26 +90,37 @@ public class DayOffService {
     }
     // -------------------------------------------------
 
-    public List<StudentDayOffBootcampListResponse> getBootcampList(){
+    public StudentDayOffResponse getDayOff(Long bootcampId){
         // 토큰에서 userId가져오기
         Long userId = jwtService.tokenToDTO(jwtService.getAccessToken()).getId();
-        // userId로 부트캠프 목록 가져오기
-        List<StudentBootcamp> bootcampListByStudentId = studentBootcampRepository.findListByStudentId(userId);
-        // 가져온 정보들을 response로 만들어주기
-        List<StudentDayOffBootcampListResponse> studentDayOffBootcampListResponses
-                = bootcampListByStudentId.stream().map(el->{
-            // 먼저 부트캠프Id로 커리큘럼List를 가져옵니다.
-            List<Curriculum> byBootcamp = curriculumRepository.findByBootcamp(el.getBootcamp());
-            // 그 후 커리큘럼의 Id를 통해 휴가들의 총합을 가져옵니다.
-            Integer bootcampSumOfDays = byBootcamp.stream().mapToInt(cu->
-                dayOffRepository.findSumOfDaysByUserId(userId,cu.getId()).orElse(0)).sum();
-
-            StudentDayOffBootcampListResponse response
-                    = new StudentDayOffBootcampListResponse(el.getBootcamp(),bootcampSumOfDays);
-            return response;
-        }).collect(Collectors.toList());
-        return  studentDayOffBootcampListResponses;
+        // 부트캠프 정보 가져오기
+        Bootcamp bootcamp = bootcampRepository.findById(bootcampId).orElse(null);
+        Integer remainingDayOff = getRemainingDayOff(bootcampId, userId);
+        List<StudentDayOffListResponse> dayOffList = dayOffRepository.findByUserIdAndBootcampId(userId, bootcampId).stream().map(el->{
+            return new StudentDayOffListResponse(el,bootcamp.getBootcampTitle());
+        }).toList();
+        return new StudentDayOffResponse(bootcamp, remainingDayOff, dayOffList);
     }
+//    public List<StudentDayOffResponse> getBootcampList(){
+//        // 토큰에서 userId가져오기
+//        Long userId = jwtService.tokenToDTO(jwtService.getAccessToken()).getId();
+//        // userId로 부트캠프 목록 가져오기
+//        List<StudentBootcamp> bootcampListByStudentId = studentBootcampRepository.findListByStudentId(userId);
+//        // 가져온 정보들을 response로 만들어주기
+//        List<StudentDayOffResponse> studentDayOffListResponse
+//                = bootcampListByStudentId.stream().map(el->{
+//            // 먼저 부트캠프Id로 커리큘럼List를 가져옵니다.
+//            List<Curriculum> byBootcamp = curriculumRepository.findByBootcamp(el.getBootcamp());
+//            // 그 후 커리큘럼의 Id를 통해 휴가들의 총합을 가져옵니다.
+//            Integer bootcampSumOfDays = byBootcamp.stream().mapToInt(cu->
+//                dayOffRepository.findSumOfDaysByUserId(userId,cu.getId()).orElse(0)).sum();
+//
+//            StudentDayOffResponse response
+//                    = new StudentDayOffResponse(el.getBootcamp(),bootcampSumOfDays);
+//            return response;
+//        }).collect(Collectors.toList());
+//        return studentDayOffListResponse;
+//    }
 
     public List<StudentDayOffListResponse> getDayOffList(Long bootcampId){
         // userId 가져오기
